* Fri Feb 09 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.4-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.3-0
- Update concat version in metadata.json
- Add concat dependency to build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.2-0
- Confine puppet version in metadata.json

* Fri Feb 03 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Fixed the validation command on the concat resource to actually validate the
  temp file prior to putting it in place

* Thu Jan 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0
- Added feature to add sudo::user_specification resources from hiera

* Wed Jan 04 2017 Nick Miller <nick.miller@onyxpoint.com> - 5.0.1-0
- Strong typed module
- Updated for Puppet 4
- Changed validate cmd to be valid

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.1-0
- Removed unnecessary pupmod-simp-rsync dependency

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Fri Aug 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.2-0
- Updated the user_specification docs and spec.

* Mon Jul 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Migration to semantic versioning and fix of the build system

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-3
- migration to simplib and simpcat (lib/ only)

* Thu Sep 03 2015 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-2
- Removed use of lsb facts.  Updated travis framework to match
  skeleton.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-1
- Changed puppet-server requirement to puppet

* Fri Apr 11 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-0
- Removed the sudo::pull_remote class.
