@@ -1,6 +1,6 @@
 {
   "name": "simp-sudo",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "author": "SIMP Team",
   "summary": "Manage sudo",
   "license": "Apache-2.0",
